[package]
name = "pxlclnt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version= "1.27.0", features = ["full"] }
clap = { version = "4.2.4", features = ["derive"] }
nom = "7.1.3"
image = "0.24.6"
itertools = "0.10.5"


[profile.release]
opt-level = 3
overflow-checks = false
strip = "debuginfo"
lto = true
panic = "abort"